Added Home button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="#page-top">hola</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#Home">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#projects">Projects</a>
@@ -75,7 +78,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Mathew Perrow</h1>
+                        <h1 id="Home" class="brand-heading">Mathew Perrow</h1>
                         <h2>Software Developer</h2>
                            
                         <a href="#projects" class="btn btn-circle page-scroll">
@@ -105,12 +108,12 @@
 
     <!-- About Section -->
     <section id="about" class="content-section text-center">
-        <div class="download-section">
+        <div id="journey" class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>My Journey</h2>
-                    <p>It's my first website. Built with Wordpress. It highlights one journey I took in my life.</p>
-                    <a href="http://www.mathewperrow.com" class="btn btn-default btn-lg">Visit My Website</a>
+                    <p id="center">It's my first website. Built with Wordpress. It highlights one journey I took in my life.</p>
+                    <a id="my-website-btn" href="http://www.mathewperrow.com" class="btn btn-default btn-lg">Visit My Website</a>
                 </div>
             </div>
         </div>
