--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <a href="https://github.com/mportland" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                       <li>
-                        <a href="https://www.linkedin.com/in/mathew-perrow-06270462/" class="btn btn-default btn-lg"><i class="fa-linkedin fa-fw""></i> <span class="network-name">LinkedIn</span></a>
+                        <a href="https://www.linkedin.com/in/mathew-perrow-06270462/" class="btn btn-default btn-lg"><i class="fa fa-linkedin" aria-hidden="true"></i> <span class="network-name">LinkedIn</span></a>
                     </li>
                 </ul>
             </div>
