--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="https://www.linkedin.com/in/mathew-perrow-06270462/">
-                    <i class="">LinkedIn</i><span class="light"></span>
+                    <i class="fa fa-linkedin btn-lg"></i>LinkedIn<span class="light"></span>
                 </a>
             </div>
 
@@ -54,7 +54,7 @@
                         <a href="#page-top">hola</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Home">Home</a>
+                        <a class="page-scroll" href="#page-top">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#projects">Projects</a>
@@ -96,7 +96,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Projects</h2>
                 <p></p>
-                <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg" >ASP.NET Projects</a>
+                <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg">ASP.NET Projects</a>
                 <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Python Projects</a>
                 <a id="projedtButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
                 
@@ -108,12 +108,14 @@
 
     <!-- About Section -->
     <section id="about" class="content-section text-center">
-        <div id="journey" class="download-section">
+        <div  class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>My Journey</h2>
                     <p id="center">It's my first website. Built with Wordpress. It highlights one journey I took in my life.</p>
+                    <div id="journey">
                     <a id="my-website-btn" href="http://www.mathewperrow.com" class="btn btn-default btn-lg">Visit My Website</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -129,7 +131,7 @@
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://www.facebook.com/mathewperrow" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/mathewperrow" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/mportland" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
