Added SQL Project button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                 <p></p>
                 <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg">ASP.NET Projects</a>
                 <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Python Projects</a>
-                <a id="projedtButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
+                <a id="projectButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
+                <a id="SQLButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
                 
 
             </div>
