--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg">ASP.NET Projects</a>
                 <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Python Projects</a>
                 <a id="projectButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
-                <a id="SQLButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
+                <a id="projectButton" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg" >SQL Projects</a>
                 
 
             </div>
