--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href=".download-section">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -98,7 +98,7 @@
                 <p></p>
                 <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg">ASP.NET Projects</a>
                 <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Python Projects</a>
-                <a id="projectButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >JavaScript Projects</a>
+                <a id="projectButton" href="https://github.com/mportland/WeatherApp" class="btn btn-default btn-lg" >JavaScript Projects</a>
                 <a id="projectButton" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg" >SQL Projects</a>
                 
 
