--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Projects</h2>
                 <p></p>
-                <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg">ASP.NET Projects</a>
-                <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Python Projects</a>
-                <a id="projectButton" href="https://github.com/mportland/WeatherApp" class="btn btn-default btn-lg" >JavaScript Projects</a>
-                <a id="projectButton" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg" >SQL Projects</a>
+                <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg">ASP.NET Project</a>
+                <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Python Project</a>
+                <a id="projectButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >UX/Design Project</a>
+                <a id="projectButton" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg" >SQL Project</a>
                 
 
             </div>
