Hover functionality on projects buttons
Added Icons representing Project framework when button is hovered over,
js needs to be refactored

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     <!-- About Section -->
     <section id="projects" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            
                 <h2>Projects</h2>
-                <p></p>
-                <a id="projectButton" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg"> BlueRibbons Review Internship ASP.NET MVC</a>
-                <a id="projectButton" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg" >Filemover Program with Python and TkInter GUI</a>
-                <a id="projectButton" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg" >UX/Design Wireframe Project</a>
-                <a id="projectButton" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg" >Library Branch Database in SQL Server</a>
+                <div id="projectLinks" class="col-lg-8 col-lg-offset-2">
+                    <a id="blueRibbons" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg projectButton">BlueRibbons Review Internship ASP.NET MVC<image id="mvc" class ="icon" src="img/mvcIcon.png"></image></a>
+                    <a id="python" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg projectButton">Filemover Program with Python and TkInter GUI<image id="pypic" class ="icon" src="img/python.ico"></image></a>
+                    <a id="design" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg projectButton" >UX/Design Wireframe Project<image id="balsamiqIcon" class ="icon" src="img/balsamiqIcon.png"></image></a>
+                    <a id="sql" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg projectButton" >Library Branch Database in SQL Server<image id="sqlIcon" class ="icon" src="img/sqlIcon.png"></image></a>
                 
 
             </div>
@@ -172,7 +172,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
-
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
