Working on adding time of day
Not finished yet. Using github to work from different computers on the
same project

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
+                        <div class="date"><span id="greeting"></span>
+                        </div>
                         <h1 id="Home" class="brand-heading">Mathew Perrow</h1>
                         <h2>Software Developer</h2>
                            
