Added personalized greeting
Added, good morning, afternoon , or evening to top of the page. Also go
rid of icons on project buttons, I'm going to rework in the future.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <div class="date"><span id="greeting"></span>
+                        <div class="date"><h2 id="greeting">Hello</h2><h2>My name is</h2> 
                         </div>
                         <h1 id="Home" class="brand-heading">Mathew Perrow</h1>
                         <h2>Software Developer</h2>
@@ -107,10 +107,10 @@
             
                 <h2>Projects</h2>
                 <div id="projectLinks" class="col-lg-8 col-lg-offset-2">
-                    <a id="blueRibbons" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg projectButton">BlueRibbons Review Internship ASP.NET MVC<image id="mvc" class ="icon" src="img/mvcIcon.png"></image></a>
-                    <a id="python" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg projectButton">Filemover Program with Python and TkInter GUI<image id="pypic" class ="icon" src="img/python.ico"></image></a>
-                    <a id="design" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg projectButton" >UX/Design Wireframe Project<image id="balsamiqIcon" class ="icon" src="img/balsamiqIcon.png"></image></a>
-                    <a id="sql" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg projectButton" >Library Branch Database in SQL Server<image id="sqlIcon" class ="icon" src="img/sqlIcon.png"></image></a>
+                    <a id="blueRibbons" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg projectButton">BlueRibbons Review Internship ASP.NET MVC</a>
+                    <a id="python" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg projectButton">Filemover Program with Python and TkInter GUI</a>
+                    <a id="design" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg projectButton" >UX/Design Wireframe Project</a>
+                    <a id="sql" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg projectButton" >Library Branch Database in SQL Server</a>
                 
 
             </div>
