--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href=".download-section">About</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -101,7 +101,7 @@
         </div>
     </header>
 
-    <!-- About Section -->
+    <!-- Projects Section -->
     <section id="projects" class="container content-section text-center">
         <div class="row">
             
