Added New Project Button

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             
                 <h2>Projects</h2>
                 <div id="projectLinks" class="col-lg-8 col-lg-offset-2">
+                    <a id="dogtrain" href="http://traingundogs.weebly.com/" class="btn btn-default btn-lg projectButton">Website Redesign</a>
                     <a id="blueRibbons" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg projectButton">BlueRibbons Review Internship ASP.NET MVC</a>
                     <a id="python" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg projectButton">Filemover Program with Python and TkInter GUI</a>
                     <a id="design" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg projectButton" >UX/Design Wireframe Project</a>
