--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -108,12 +108,13 @@
         <div class="row">
             
                 <h2>Projects</h2>
-                <div id="projectLinks" class="col-lg-8 col-lg-offset-2">
-                    <a id="dogtrain" href="http://traingundogs.weebly.com/" class="btn btn-default btn-lg projectButton">Website Redesign</a>
+                <div id="projectLinks" class="col-lg-8 col-lg-offset-2 ">
+                    <a id="dogtrain" href="http://traingundogs.weebly.com/" class="btn btn-default btn-lg projectButton">Website Redesign & SEO</a>
+                    <a id="usbtransfer" href="https://github.com/mportland/USBTransferGUI" class="btn btn-default btn-lg projectButton">Python GUI Shell Program</a>
                     <a id="blueRibbons" href="https://github.com/mportland/RibbonsReviews/tree/master" class="btn btn-default btn-lg projectButton">BlueRibbons Review Internship ASP.NET MVC</a>
                     <a id="python" href="https://github.com/mportland/Filemover-program" class="btn btn-default btn-lg projectButton">Filemover Program with Python and TkInter GUI</a>
                     <a id="design" href="https://github.com/mportland/AboutMeAutomator" class="btn btn-default btn-lg projectButton" >UX/Design Wireframe Project</a>
-                    <a id="sql" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg projectButton" >Library Branch Database in SQL Server</a>
+                    <a id="sql" href="https://github.com/mportland/SQL-Library-Database" class="btn btn-default btn-lg projectButton" >Library Branch Database with SQL Server</a>
                 
 
             </div>
