Cleaning up some text
Updated text

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h1 id="Home" class="brand-heading"><span id="mathew">Mathew Perrow</span>
                         
                         </h1>
-                        <h2>Software Developer</h2>
+                        <h2>User Experience Specialist</h2>
                            
                         <a href="#projects" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
